snap scrolling, responsive updates, start packs hovered, element alignment fixes, transparent gradient blending of pack cards

--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -1,11 +1,11 @@
 .container {
-  position: relative;
-  top: calc(100% - 130px);
-
+  position: relative; 
+  bottom: 0px;
+  
   height: 80px;
   width: 100%;
-  border-top: 1px solid #fff; 
-  
+  border-top: 1px solid #fff;
+
   background: linear-gradient(355deg, #111111 50%, #363638 100%);
 }
 
