--- a/src/components/PackCard/index.module.css
+++ b/src/components/PackCard/index.module.css
@@ -8,9 +8,7 @@
   background-color: #1f1f21;
   border: 1px solid #fff;
 
-  margin-top: 100px;
-
-  transition-duration: 0.25s; 
+  transition-duration: 0.25s;
 }
 
 .packContainer:hover {
@@ -31,6 +29,10 @@
 }
 .packContainer:hover .buyButton {
   border: 1px solid #e22120;
+}
+
+.syntheticHover { 
+  transform: translateY(-75px);
 }
 
 .buyButton {
@@ -81,4 +83,52 @@
 .indent {
   margin-top: 15px;
   text-indent: 20px;
+}
+
+@media only screen and (max-width: 660px) {
+  .pack {
+    width: 300px;
+    height: 300px;
+    margin-top: -10px;
+  }
+
+  .packContainer {
+    margin-top: 15px;
+    width: 340px;
+    min-width: 340px;
+    height: 408px;
+  }
+
+  .packDescription {
+    padding-top: 25px;
+    font-size: 12px;
+  }
+
+  .indent {
+    margin-top: 5px;
+  }
+}
+
+@media only screen and (max-height: 600px) {
+  .pack {
+    width: 300px;
+    height: 300px;
+    margin-top: -10px;
+  }
+
+  .packContainer {
+    margin-top: 15px;
+    width: 340px;
+    min-width: 340px;
+    height: 408px;
+  }
+
+  .packDescription {
+    padding-top: 25px;
+    font-size: 12px;
+  }
+
+  .indent {
+    margin-top: 5px;
+  }
 }
