--- a/src/styles/pages/index.module.css
+++ b/src/styles/pages/index.module.css
@@ -2,49 +2,78 @@
   position: relative;
   width: 100%;
   height: 100%;
-  overflow-y: auto;
   overflow-x: hidden;
   scroll-behavior: smooth;
 
   background: #363638;
-  /* background-image: radial-gradient(#fff 1px, transparent 0);
-  background-size: 60px 60px;
-  background-position: -10px 10px; */
-}
-
-.containerOverlay {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
 }
 
 .bodyContainer {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  
-  padding: 80px 80px 80px;
+  display: flex;
+  flex-direction: column;
+  /* height: 100%; */
+  margin: 80px 80px 80px;
+}
 
+.packContainer {
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: 25%; 
-  gap: 10px; 
+  gap: 100px;
 
   overflow-x: scroll;
+  overflow-y: hidden;
   overscroll-behavior-inline: contain;
   scroll-snap-type: inline mandatory;
   scroll-padding-inline: 80px;
+  padding-top: 40px;
 }
 
-.bodyContainer > * {
-  scroll-snap-align: start;
+.packContainer > * {
+  scroll-snap-align: center;
 }
 
-/* 
-@media only screen and (max-width: 2510px) {
-  .bodyContainer {
-    gap: 10px; 
+@media only screen and (min-width: 600px) {
+  .packContainer {
+    /* linear-gradient(to right, transparent 0%, black 4%), */
+    /* -webkit-mask-image: linear-gradient(to left, transparent 0%, black 5%);
+    mask-image: linear-gradient(
+      90deg,
+      transparent,
+      rgba(0, 0, 0, 0) 0%,
+      #000 5%
+    ); */
+    /* -webkit-mask: linear-gradient(to left, transparent 0%, black 5%); */
+    -webkit-mask: linear-gradient(
+        to right,
+        transparent 5%,
+        #fff 10% 95%,
+        transparent 100%
+      ),
+      linear-gradient(to left, transparent 5%, #fff 10% 95%, transparent 100%);
+    -webkit-mask-size: 110% 110%;
+    -webkit-mask-position: center;
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-composite: source-in;
+    /* -webkit-mask-image: linear-gradient(to right, transparent 0%, black 5%); */
   }
-} */
+  /* .packContainer::before,
+  .packContainer::after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    width: 5%;
+  } */
+
+  /* .packContainer::before {
+    left: 80px;
+    -webkit-mask-image: linear-gradient(to right, transparent 0%, black 95%);
+    mask-image: linear-gradient(to right, transparent 0%, black 5%);
+  }
+  .packContainer::after {
+    right: 80px;
+    -webkit-mask-image: linear-gradient(to left, transparent 0%, black 5%);
+    mask-image: linear-gradient(to left, transparent 0%, black 5%);
+    z-index: 3;
+  } */
+}
